--- a/Liên hệ.html
+++ b/Liên hệ.html
@@ -23,8 +23,8 @@
                 <nav>
                     <nav class="menu">
                         <ul>
-                        <li><a href="Trang chủ.html">Trang chủ</a></li>
-                        <li><a href="#">Giới thiệu</a></li>
+                        <li><a href="index.html">Trang chủ</a></li>
+                        <li><a href="giới thiệu.html">Giới thiệu</a></li>
                         <LI> 
                         <a href="Liên hệ.html">Liên hệ</a>
                         <UL>
